--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -136,7 +136,7 @@ Typically, large companies do not have enough time to open each CV, so they use 
     <div class="container pb-xl-5 pb-lg-3">
       <h3 class="title text-center mb-lg-5 mb-md-4 mb-sm-4 mb-3"> Test Your Resume</h3>
       <div class="row" style="justify-content: center;">
-        <form action="{{ url_for('predict') }}" method="POST" enctype=multipart/form-data>
+        <form action="{{ url_for('extract') }}" method="POST" enctype=multipart/form-data>
           <div class="form-group text-center">
             <h4 for="exampleFormControlFile1"><b>Upload a Your resume's Photo</b></h4>
             <br />
