compliting flask web application with model

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -140,7 +140,7 @@ Typically, large companies do not have enough time to open each CV, so they use 
           <div class="form-group text-center">
             <h4 for="exampleFormControlFile1"><b>Upload a Your resume's Photo</b></h4>
             <br />
-            <input type="file" name="file" class="form-control" id="inputImage" onchange=previewImage(event) required >
+            <input type="file" name="file" class="form-control" id="inputImage" required >
             <br />
             <button class="btn btn-primary" type="submit"> Extract </button>
           </div>
@@ -166,30 +166,6 @@ Typically, large companies do not have enough time to open each CV, so they use 
 
   <script>
 
-    function previewImage(event) {
-      
-      var reader = new FileReader();
-      reader.onload = function () {
-        var output = document.getElementById('output-image')
-        output.src = reader.result;
-        localStorage.setItem("storedImage", reader.result);
-      }
-      reader.readAsDataURL(event.target.files[0]);
-    }
-
-    
-    function displayImg(){
-      var storedImage = localStorage.getItem("storedImage");
-      console.log(storedImage);
-      if(storedImage){
-        document.getElementById("crop_img").src =  storedImage;
-      }
-    }
-    if(document.getElementById('pred_value') != null){
-      window.onload = displayImg();
-    }
-    
-    
 
   </script>
 </body>
