--- a/src/templates/prediction.html
+++ b/src/templates/prediction.html
@@ -21,8 +21,7 @@
         </div>
         <div class="col-sm py-2 ">
             <div class="card card-body" style="justify-content: center; background-color:rgba(228, 222, 104, 0.967)">
-                <p class="text-center" id="pred_value" style="color: black; font-size: 22px;" value="{{result[1]}}">Plant: {{result[1]}}</p>
-                <p class="text-center" style="color: black; font-size: 22px;">Disease: {{result[0]}}</p>
+                <p class="text-center" id="pred_value" style="color: black; font-size: 22px;" value="{{result[1]}}">Resume Category: {{result}}</p>
             </div>
         </div>
     </div>
